--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+	font-size: 62.5%;
+	color-scheme: dark light;
+}
+
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	font: inherit;
+	box-sizing: border-box;
+	color: inherit;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	color: black;
+	margin: 0;
+	font-family: 'Poppins', sans-serif, -apple-system;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+	/* display: flex;
+	justify-content: center;
+	flex-direction: column; */
+	align-items: center;
+}
+
+img,
+picture,
+svg,
+video {
+	display: block;
+	max-width: 100%;
+}
+
+svg {
+	pointer-events: none;
+}
+
+input,
+textarea,
+button,
+select {
+	font: inherit;
+	color: #2d2d2d;
+}
+
+input:focus,
+textarea:focus,
+button:focus,
+select:focus {
+	outline: none;
+}
+
+button {
+	background-color: transparent;
+}
+
+textarea::placeholder,
+input::placeholder {
+	color: #bbb;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+h1 {
+	font-size: 4rem;
+	font-weight: 600;
+}
+
+h2 {
+	font-size: 3rem;
+	font-weight: 400;
+}
+
+h3 {
+	font-size: 5rem;
+	font-weight: 700;
+}
+
+button {
+	border: none;
+}
+
+button:focus {
+	outline: none;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:visited {
+	color: inherit;
+}
+
+p {
+	line-height: 150%;
 }
