--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html {
 
 body {
 	color: black;
-	margin: 0;
+	min-height: 100vh;
 	font-family: 'Poppins', sans-serif, -apple-system;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -49,7 +49,7 @@ textarea,
 button,
 select {
 	font: inherit;
-	color: #2d2d2d;
+	/* color: #2d2d2d; */
 }
 
 input:focus,
@@ -65,7 +65,7 @@ button {
 
 textarea::placeholder,
 input::placeholder {
-	color: #bbb;
+	/* color: #bbb; */
 }
 
 code {
