--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -21,10 +21,22 @@
 	border-radius: 1000px;
 	background-color: white;
 	box-shadow: 0 5px 10px 0 rgba(0, 144, 255, 0.25);
+	cursor: pointer;
 
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
+	transition: all 0.2s;
+
+	&:hover {
+		box-shadow: 0 6px 12px 0 rgba(0, 144, 255, 0.35);
+		transform: translateY(-1px);
+	}
+	&:active {
+		box-shadow: 0 3px 6px 0 rgba(0, 144, 255, 0.15);
+		transform: translateY(1px);
+	}
 
 	&__line {
 		position: relative;
