--- a/src/components/UserAvatar/UserAvatar.scss
+++ b/src/components/UserAvatar/UserAvatar.scss
@@ -1,15 +1,44 @@
 .userAvatar {
-	width: 5rem;
-	height: 5rem;
 	border-radius: 1000px;
 	border: 1px solid rgba(0, 144, 255, 0.2);
 	box-shadow: 0 5px 10px 0 rgba(0, 144, 255, 0.25);
 	cursor: pointer;
-	padding: 0.5rem;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: all 0.2s;
+
+	&.sm {
+		width: 5rem;
+		height: 5rem;
+	}
+	&.md {
+		width: 7rem;
+		height: 7rem;
+	}
+
+	&:hover {
+		box-shadow: 0 6px 12px 0 rgba(0, 144, 255, 0.35);
+		transform: translateY(-1px);
+	}
+	&:active {
+		box-shadow: 0 3px 6px 0 rgba(0, 144, 255, 0.15);
+		transform: translateY(1px);
+	}
 }
 
 .userAvatar__img {
 	width: 4rem;
 	height: 4rem;
 	border-radius: 1000px;
+
+	&.sm {
+		width: 4rem;
+		height: 4rem;
+	}
+	&.md {
+		width: 5.6rem;
+		height: 5.6rem;
+	}
 }
