--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -1,7 +1,7 @@
 .pageHeader {
-	display: flex;
+	display: grid;
+	grid-template-columns: 1fr min-content;
 	align-items: center;
-	justify-content: space-between;
 	margin-top: 4rem;
 	margin-bottom: 3rem;
 
@@ -9,8 +9,10 @@
 		font-size: 5.2rem;
 		font-weight: 700;
 		letter-spacing: -1px;
+		line-height: 100%;
 		color: white;
 		text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+		justify-self: flex-start;
 	}
 }
 
@@ -22,6 +24,7 @@
 	background-color: white;
 	box-shadow: 0 5px 10px 0 rgba(0, 144, 255, 0.25);
 	cursor: pointer;
+	justify-self: flex-end;
 
 	display: flex;
 	align-items: center;
