--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -6,11 +6,15 @@
 	margin-bottom: 3rem;
 
 	&__title {
-		font-size: 5.2rem;
+		font-size: 4.8rem;
 		font-weight: 700;
 		letter-spacing: -1px;
 		line-height: 100%;
 		color: white;
+		overflow-wrap: break-word;
+		-webkit-hyphens: auto;
+		hyphens: manual;
+		text-align: left;
 		text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 		justify-self: flex-start;
 	}
