--- a/src/components/ui/CardList/CardListItem/CardListItem.scss
+++ b/src/components/ui/CardList/CardListItem/CardListItem.scss
@@ -1,12 +1,16 @@
 .cardListItem {
+	position: relative;
 	width: 100%;
-	padding: 1rem;
-	padding-right: 1.2rem;
-	border-radius: 1.2rem;
-	border: 1px solid rgba(0, 0, 0, 0.15);
-	box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.15);
+	padding: 1rem 0;
 
-	// border: 1px solid rgba(0, 144, 255, 0.2);
-	// box-shadow: 0 6px 6px 0 rgba(0, 144, 255, 0.25);
-	// box-shadow: inset 0 -4px 4px 0 rgba(0, 144, 255, 0.5);
+	&:not(:last-child)::after {
+		content: '';
+		position: absolute;
+		bottom: -1rem;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 100%;
+		height: 1px;
+		background-color: rgba(0, 0, 0, 0.2);
+	}
 }
